--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,14 @@ android:paddingTop="200dp"
         android:layout_marginTop="15dp"
         android:background="@drawable/tombol_bulat"/>
 
+    <Button
+        android:text="Register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btnLogin"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/btnRegister"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/tombol_bulat"/>
+
 </RelativeLayout>
